# slingshot

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile.zkvm-demo  README.md  check-markdown-links.rb  spec.md
.circleci/: config.yml
.github/workflows/: check-crates  check-crates.yml
accounts/: Cargo.toml  README.md
accounts/src/: address.rs  derivation.rs  lib.rs  receiver.rs  tests.rs
benches/: spacesuit.rs
blockchain/: Cargo.toml  README.md  rust-toolchain
blockchain/docs/: utxo-index.md
blockchain/src/: block.rs  codec.rs  errors.rs  index.rs  lib.rs  mempool.rs  protocol.rs  shortid.rs  state.rs  tests.rs
blockchain/src/utreexo/: forest.rs  mod.rs  tests.rs
demo/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  rust-toolchain
demo/migrations/2019-08-07-115941_create_tables/: down.sql  up.sql
demo/src/: account.rs  asset.rs  blockchain.rs  db.rs  handlers.rs  main.rs  mempool.rs  models.rs  names.rs  net.rs  nodes.rs  publication.rs  records.rs  schema.rs  sidebar.rs  user.rs  util.rs
demo/static/: main.css  main.js
demo/templates/: 404.html.tera  base.html.tera
demo/templates/accounts/: show.html.tera
demo/templates/assets/: show.html.tera
demo/templates/network/: block_show.html.tera  blocks.html.tera  mempool.html.tera  status.html.tera
demo/templates/nodes/: show.html.tera
keytree/: Cargo.toml  keytree.md
keytree/src/: lib.rs  serialization.rs  tests.rs  transcript.rs
merkle/: Cargo.toml
merkle/src/: lib.rs
musig/: Cargo.toml  README-russell.md  README.md
musig/docs/: musig-spec.md
musig/src/: context.rs  counterparty.rs  deferred_verification.rs  errors.rs  key.rs  lib.rs  multisignature.rs  point_op.rs  signature.rs  signer.rs  tests.rs  transcript.rs
node/: Cargo.toml  README.md  api.md  test-config.toml
node/src/: api.rs  bc.rs  cli_args.rs  comm.rs  config.rs  errors.rs  json.rs  main.rs  wallet.rs  wallet_manager.rs
node/src/api/: data.rs  dto.rs  network.rs  requests.rs  response.rs  responses.rs  serde_utils.rs  types.rs  wallet.rs  warp_utils.rs
node/src/api/network/: handlers.rs  requests.rs  responses.rs
node/src/api/wallet/: handlers.rs  requests.rs  responses.rs
node/src/ui/: bc_annotations.rs  mod.rs  routes.rs  templates.rs  ui_helpers.rs  ws.rs
node/templates/: 404.html  404.html.tera  500.html  base.html  base.html.tera  index.html  ledger_new.html  welcome.html
node/templates/assets/: show.html.tera
node/templates/network/: blocks.html.tera  status.html.tera
node/templates/nodes/: show.html.tera
p2p/: Cargo.toml  README.md
p2p/examples/: chatter.rs
p2p/src/: codec.rs  cybershake.rs  lib.rs  node.rs  peer.rs  priority.rs
paychan/: Cargo.toml
paychan/src/: lib.rs
readerwriter/: Cargo.toml
readerwriter/src/: bytes_ext.rs  bytes_support.rs  codable.rs  lib.rs  merlin_ext.rs  merlin_support.rs  reader.rs  writer.rs
schnorr/: Cargo.toml  README.md
schnorr/docs/: spec.md
schnorr/src/: batch.rs  deferred_verification.rs  errors.rs  key.rs  lib.rs  serialization.rs  signature.rs  transcript.rs
slidechain/: NOTICE  Pegging.md  Readme.md  Running.md  atomic.go  contracts.go  custodian.go  export.go  export_test.go  get.go  go.mod  go.sum  import.go  issue.go  pegin.go  pin.go  pin_test.go  postexport.go  postpegout.go  prepeg.go  record.go  retire.go  schema.go  slidechain.go  slidechain_test.go  store.go  submit.go  unique.go  watch.go
slidechain/cmd/account/: account.go
slidechain/cmd/export/: export.go
slidechain/cmd/key/: key.go
slidechain/cmd/peg/: peg.go
slidechain/mockhorizon/: mockhorizon.go
slidechain/net/: error.go
slidechain/stellar/: account.go  peg.go  tx.go
slidechain/store/: store.go
spacesuit/: Cargo.toml  README.md  spec.md
spacesuit/benches/: spacesuit.rs
spacesuit/src/: bit_range.rs  cloak.rs  lib.rs  mix.rs  range_proof.rs  shuffle.rs  signed_integer.rs  value.rs
spacesuit/tests/: spacesuit.rs
spec/: ZkVM.md
src/: assembler.rs  assignment_holder.rs  cloak.rs  encoding.rs  error.rs  errors.rs  gadgets.rs  lib.rs  mix.rs  ops.rs  point_ops.rs  predicate.rs  range_proof.rs  shuffle.rs  signature.rs  spacesuit.rs  transaction.rs  transaction_tests.rs  txlog.rs  types.rs  util.rs  value.rs  vm.rs
src/gadgets/: inner_mix.rs  inner_shuffle.rs  k_mix.rs  k_mix_insecure.rs  k_shuffle.rs  k_value_shuffle.rs  merge.rs  mix.rs  mod.rs  pad.rs  padded_shuffle.rs  range_proof.rs  scalar_shuffle.rs  shuffle.rs  split.rs  transaction.rs  value.rs  value_shuffle.rs
starsig/: .gitignore  Cargo.toml  README.md
starsig/docs/: spec.md
starsig/src/: batch.rs  errors.rs  key.rs  lib.rs  serialization.rs  signature.rs  tests.rs  transcript.rs
tests/: mod.rs  spacesuit.rs
token/: Cargo.toml
token/src/: derivation.rs  lib.rs  token.rs
treasury/: Cargo.toml
treasury/src/: lib.rs  treasury.rs
utils/: check-markdown-links.rb  pre-commit
utreexo/: Cargo.toml
utreexo/src/: error.rs  hash.rs  lib.rs  proof.rs  update.rs  utreexo.rs
utxo/: Cargo.toml  rust-toolchain
utxo/src/: lib.rs  utxo.rs
zkvm/: Cargo.toml  README.md  spec2rustdoc.rb
zkvm/docs/: import-spec.md  utreexo.md  zkvm-api.md  zkvm-blockchain.md  zkvm-design.md  zkvm-impl.md  zkvm-import.md  zkvm-mempool.md  zkvm-spec.md  zkvm-stubnet.md  zkvm-tx-lifecycle.md
zkvm/spec/: ZkVM.md
zkvm/src/: asm.rs  constraints.rs  contract.rs  debug.rs  dsl.rs  encoding.rs  errors.rs  fees.rs  key_witness.rs  keys.rs  lib.rs  merkle.rs  nits.rs  ops.rs  patricia.rs  point_ops.rs  predicate.rs  program.rs  prover.rs  scalar_witness.rs  serialization.rs  signature.rs  transcript.rs  treasury.rs  tx.rs  txlog.rs  types.rs  verifier.rs  vm.rs
zkvm/src/blockchain/: block.rs  errors.rs  fees.rs  mempool.rs  mod.rs  nits.rs  protocol.rs  shortid.rs  state.rs  tests.rs  utreexo.rs
zkvm/src/signature/: counterparty.rs  mod.rs  multikey.rs  musig.rs  prover.rs  signature.md  signer.rs
zkvm/src/signer/: lib.rs  mod.rs  prover.rs
zkvm/src/utreexo/: bitarray.rs  forest.rs  heap.rs  insertions.rs  mod.rs  newforest.rs  nodes.rs  path.rs  serialization.rs  tests.rs
zkvm/tests/: zkvm.rs
(+1 files in other folders)
