[package]
name = "spacesuit"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>", "Cathie Yun <cathieyun@gmail.com>", "Oleg Andreev <oleganza@gmail.com>"]

[dependencies]
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "circuit" }
curve25519-dalek = { version = "1.0.0-pre.0", features = ["serde"] }
merlin = "1.0.0-pre.0"
rand = "0.5.0-pre.2"
subtle = "2.0.0-pre.0"
failure = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "spacesuit"
harness = false