[workspace]

members = [
    "readerwriter",
    "merkle",
    "starsig",
    "musig",
    "keytree",
    "spacesuit",
    "zkvm",
    "blockchain",
    "token",
    "accounts",
    "paychan",
    "p2p",
    "node",
]

# `demo` crate is built separately with nightly as required by Rocket
exclude = ["demo"]
