[package]
name = "accounts"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
byteorder = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
bech32 = "0.7"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.keytree]
path = "../keytree"

[dependencies.musig]
path = "../musig"

[dependencies.zkvm]
path = "../zkvm"

[dev-dependencies.blockchain]
path = "../blockchain"

[dev-dependencies]
rand_chacha = "0.2"
hex = "^0.3"
