[package]
name = "blockchain"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/stellar/slingshot"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A blockchain protocol for ZkVM transactions"

[dependencies]
failure = "0.1"
byteorder = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.3"
hex = "^0.3"
async-trait = "0.1.24"
siphasher = "0.3.1"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.starsig]
path = "../starsig"

[dependencies.readerwriter]
path = "../readerwriter"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"
futures-executor = "0.3"
