[package]
name = "keytree"
version = "0.1.0"
authors = ["Tess Rinearson <tess.rinearson@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
merlin = "1.0.1"
rand = "0.6"

[dependencies.musig]
path = "../musig"

[dev-dependencies]
rand_chacha = "0.1"
hex = "^0.3"
