[package]
name = "keytree"
version = "0.2.0"
authors = ["Tess Rinearson <tess.rinearson@gmail.com>", "Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
merlin = "2"
rand = "0.7"

[dependencies.starsig]
path = "../starsig"

[dev-dependencies]
rand_chacha = "0.2"
hex = "^0.3"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]
