[package]
name = "musig"
version = "0.1.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", "Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }

[dependencies.starsig]
path = "../starsig"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "subtle/nightly"]
