[package]
name = "node"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
clap = "~2.33.3"
curve25519-dalek = { version = "3", features = ["serde"] }
merlin = "2"
rand = "0.7"
dotenv = "0.9.0"
time = "^0.1"
serde = { version = "1.0", features=["derive"] }
hex = "^0.3"
futures = "0.3"
futures-util = "0.3"
tokio = {version = "0.2", features=["full"]}
warp = "0.2"
tera = "1"
notify = "4"
toml = "0.5"
bincode = "1.3.1"
dirs = "3.0.1"

[dependencies.blockchain]
path = "../blockchain"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.keytree]
path = "../keytree"

[dependencies.musig]
path = "../musig"

[dependencies.p2p]
path = "../p2p"

[dependencies.accounts]
path = "../accounts"

[dependencies.token]
path = "../token"

[dependencies.serde_json]
git = "https://github.com/oleganza/json"
#path = "../../../rust/serde-json"
branch = "binary-support"
features = ["binary_hex"]
