[package]
name = "paychan"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/stellar/slingshot"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A payment channel protocol for ZkVM"

[dependencies]
thiserror = "1"
byteorder = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.3"
hex = "^0.3"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.starsig]
path = "../starsig"

[dependencies.musig]
path = "../musig"

[dependencies.readerwriter]
path = "../readerwriter"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"
