[package]
name = "spacesuit"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>", "Cathie Yun <cathieyun@gmail.com>", "Oleg Andreev <oleganza@gmail.com>"]

[dependencies]
failure = "0.1"
merlin = "1.0.1"
rand = "0.6"
subtle = "2"
curve25519-dalek = { version = "1.0.1", features = ["serde"] }

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "spacesuit"
harness = false