[package]
name = "spacesuit"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>", "Cathie Yun <cathieyun@gmail.com>", "Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }

[dependencies.bulletproofs]
git = "https://github.com/rubdos/bulletproofs"
branch = "244"
features = ["yoloproofs"]

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "subtle/nightly", "bulletproofs/nightly"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "spacesuit"
harness = false
