[package]
name = "starsig"
version = "0.2.1"
authors = ["Oleg Andreev <oleganza@gmail.com>", "Cathie Yun <cathieyun@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/stellar/slingshot/blob/main/starsig"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "signatures", "schnorr", "batch"]
description = "A pure-Rust implementation of Schnorr signatures using Ristretto"

[dependencies]
thiserror = "1"
merlin = "2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
hex = "^0.3"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]
