[package]
name = "token"
version = "0.1.0"
authors = ["Vicki Niu <vicki.niu@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
byteorder = "1"
merlin = "2"
postgres = "0.15"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "2", features = ["serde"] }

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.spacesuit]
path = "../spacesuit"

[dependencies.zkvm]
path = "../zkvm"
