[package]
name = "zkvm"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/interstellar/zkvm"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A blockchain VM with cloaked transactions and zero-knowledge smart contracts"

[dependencies]
failure = "0.1"
byteorder = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "2", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.3"
hex = "^0.3"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.spacesuit]
path = "../spacesuit"

[dependencies.musig]
path = "../musig"

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"
